kubernetes/apps/webdev/games-manager/frontend/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: games-manager-frontend
    app.kubernetes.io/instance: games-manager-frontend
    app.kubernetes.io/name: games-manager-frontend
  name: games-manager-frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: games-manager-frontend
  template:
    metadata:
      labels:
        app: games-manager-frontend
        app.kubernetes.io/name: games-manager-frontend
    spec:
      containers:
      - image: ghcr.io/fma965/games-manager-frontend:v1.0.3
        name: games-manager-frontend
