kubernetes/apps/webdev/games-manager/frontend/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: games-manager-frontend
spec:
  hostnames: ["games.f9.casa"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: games-manager-frontend
          port: 80
