kubernetes/apps/webdev/games-manager/frontend/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: games-manager-frontend
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`games.f9.casa`)
      kind: Rule
      services:
        - name: games-manager-frontend
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik
          namespace: security
